--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">SunShine</string>
-    <string name="action_settings">Settings</string>
-    <string name="action_refresh" translatable="false">Refresh</string>
+<string name="app_name">SunShine</string>
+<string name="action_settings">Settings</string>
+<string name="action_refresh" translatable="false">Refresh</string>
+<string name="title_activity_detail" translatable="false">Detail</string>
+<string name="pref_location_label">Location</string>
+<string name="pref_location_key">pref_location_key</string>
+<string name="pref_location_default">pref_location_default</string>
 </resources>
