--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-<string name="app_name">SunShine</string>
-<string name="action_settings">Settings</string>
-<string name="action_refresh" translatable="false">Refresh</string>
-<string name="title_activity_detail" translatable="false">Detail</string>
-<string name="pref_location_label">Location</string>
-<string name="pref_location_key">pref_location_key</string>
-<string name="pref_location_default">pref_location_default</string>
+    <string name="app_name">SunShine</string>
+    <string name="action_settings">Settings</string>
+    <string name="action_refresh" translatable="false">Refresh</string>
+    <string name="title_activity_detail" translatable="false">Detail</string>
+    <string name="pref_location_label">Location</string>
+    <string name="pref_location_key">pref_location_key</string>
+    <string name="pref_location_default">pref_location_default</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="title_activity_setting">Settings</string>
+    <!-- Label for the temperature units preference [CHAR LIMIT=30] -->
+    <string name="pref_units_label">Temperature Units</string>
+
+    <!-- Label for metric option in temperature unit preference [CHAR LIMIT=25] -->
+    <string name="pref_units_label_metric">Metric</string>
+
+        <!-- Label for imperial option in temperature unit preference [CHAR LIMIT=25] -->
+        <string name="pref_units_label_imperial">Imperial</string>
+
+        <!-- Key name for temperature unit preference in SharedPreferences [CHAR LIMIT=NONE] -->
+        <string name="pref_units_key" translatable="false">units</string>
+
+        <!-- Value in SharedPreferences for metric temperature unit option [CHAR LIMIT=NONE] -->
+        <string name="pref_units_metric" translatable="false">metric</string>
+
+        <!-- Value in SharedPreferences for imperial temperature unit option [CHAR LIMIT=NONE] -->
+        <string name="pref_units_imperial" translatable="false">imperial</string>
+
+    <string name="action_map">Map Location</string>
+    <string name="action_share">Share</string>
 </resources>
